...
    init(mapView: MapboxMaps.MapView, renderSize: CGSize?, contentInsets: UIEdgeInsets = .zero) {
        self.mapView = mapView
        self.renderSize = renderSize
        self.contentInsets = contentInsets
        super.init(frame: .zero)
        clipsToBounds = true
        accessibilityIdentifier = "map-visible-viewport"
        addSubview(mapView)
    }

    required init?(coder: NSCoder) { nil }

    override func didMoveToWindow() {
...
